--- a/JSONS/web-corp/Web _ Corp Components -- PaymentMaskedNumber.json
+++ b/JSONS/web-corp/Web _ Corp Components -- PaymentMaskedNumber.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "generatedAt": "2025-11-20T06:19:11.447Z",
+    "generatedAt": "2025-11-20T21:48:16.101Z",
     "version": "0.1.0",
     "files": [
       "PaymentMaskedNumber"
@@ -227,6 +227,7 @@
         "bd25bbd83bfc28176b42284659f21c8a7cd8e97b": []
       },
       "parentComponent": null,
+      "parentComponents": [],
       "role": "main",
       "status": "active",
       "platform": "universal"
@@ -793,9 +794,19 @@
         ]
       },
       "parentComponent": {
-        "key": "640611059a9889ec25a402e98484667d9bc9b63c",
-        "name": "[M] AccountOptionListContent "
+        "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+        "name": "PaymentMaskedNumber",
+        "role": "main",
+        "status": "active"
       },
+      "parentComponents": [
+        {
+          "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+          "name": "PaymentMaskedNumber",
+          "role": "main",
+          "status": "active"
+        }
+      ],
       "role": "part",
       "status": "active",
       "platform": "universal"
@@ -847,9 +858,19 @@
         "d4e927d5ad51b45cc2807929a283e1b6857474a4": []
       },
       "parentComponent": {
-        "key": "640611059a9889ec25a402e98484667d9bc9b63c",
-        "name": "[M] AccountOptionListContent "
+        "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+        "name": "PaymentMaskedNumber",
+        "role": "main",
+        "status": "active"
       },
+      "parentComponents": [
+        {
+          "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+          "name": "PaymentMaskedNumber",
+          "role": "main",
+          "status": "active"
+        }
+      ],
       "role": "part",
       "status": "active",
       "platform": "universal"
@@ -903,9 +924,19 @@
         "c9f03ba2dce7b95a5012b0a6c252bf2a8ee4d7ef": []
       },
       "parentComponent": {
-        "key": "640611059a9889ec25a402e98484667d9bc9b63c",
-        "name": "[M] AccountOptionListContent "
+        "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+        "name": "PaymentMaskedNumber",
+        "role": "main",
+        "status": "active"
       },
+      "parentComponents": [
+        {
+          "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+          "name": "PaymentMaskedNumber",
+          "role": "main",
+          "status": "active"
+        }
+      ],
       "role": "part",
       "status": "active",
       "platform": "universal"
@@ -971,9 +1002,19 @@
         ]
       },
       "parentComponent": {
-        "key": "640611059a9889ec25a402e98484667d9bc9b63c",
-        "name": "[M] AccountOptionListContent "
+        "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+        "name": "PaymentMaskedNumber",
+        "role": "main",
+        "status": "active"
       },
+      "parentComponents": [
+        {
+          "key": "bd25bbd83bfc28176b42284659f21c8a7cd8e97b",
+          "name": "PaymentMaskedNumber",
+          "role": "main",
+          "status": "active"
+        }
+      ],
       "role": "part",
       "status": "active",
       "platform": "universal"
